tests/ui/imports/redundant-import-issue-121915.stderr
error: the item `aux_issue_121915` is imported redundantly
  --> $DIR/redundant-import-issue-121915.rs:6:9
   |
LL |     use aux_issue_121915;
   |         ^^^^^^^^^^^^^^^^ the item `aux_issue_121915` is already defined by prelude
   |
note: the lint level is defined here
  --> $DIR/redundant-import-issue-121915.rs:4:8
   |
LL | #[deny(unused_imports)]
   |        ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

